--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "homepage": "https://github.com/frappe/gantt",
   "devDependencies": {
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@rollup/plugin-babel": "^5.0.0",
     "deepmerge": "^2.0.1",
     "eslint": "^4.17.0",
     "eslint-config-prettier": "^2.9.0",
