--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@babel/preset-env": "^7.9.6",
     "@rollup/plugin-babel": "^5.0.0",
     "deepmerge": "^2.0.1",
-    "eslint": "^4.17.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "jest": "^22.2.1",
-    "prettier": "1.10.2",
+    "prettier": "^2.0.5",
     "rollup": "^0.55.3",
     "rollup-plugin-sass": "^0.5.3",
     "rollup-plugin-uglify": "^3.0.0"
