--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,20 @@
 {
-    "extends": ["plugin:prettier/recommended"],
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module"
-    }
+  "extends": ["airbnb", "prettier"],
+  "plugins": ["prettier"],
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "no-underscore-dangle": "off",
+    "one-var": "off",
+    "camelcase": "warn",
+    "no-restricted-syntax": "off"
+  }
 }
