--- a/package.json
+++ b/package.json
@@ -34,9 +34,14 @@
     "@babel/preset-env": "^7.9.6",
     "@rollup/plugin-babel": "^5.0.0",
     "deepmerge": "^2.0.1",
-    "eslint": "^7.0.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "1.7.0",
     "jest": "^22.2.1",
     "prettier": "^2.0.5",
     "rollup": "^0.55.3",
