satisfy linter rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,12 @@
     "no-underscore-dangle": "off",
     "one-var": "off",
     "camelcase": "warn",
+    "no-bitwise": "off",
+    "func-names": "off",
+    "no-plusplus": "off",
+    "no-param-reassign": "off",
+    "prefer-destructuring": "off",
+    "prefer-template": "off",
     "no-restricted-syntax": "off"
   }
 }
