--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "1.7.0",
     "jest": "^22.2.1",
+    "jsdoc": "~3.6.4",
     "prettier": "^2.0.5",
     "rollup": "^0.55.3",
     "rollup-plugin-sass": "^0.5.3",
