--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,22 @@
 {
-  "extends": ["airbnb", "prettier"],
-  "plugins": ["prettier"],
+  "extends": ["airbnb", "prettier", "openlayers"],
+  "plugins": ["prettier", "@openlayers"],
   "env": {
     "browser": true,
     "node": true
   },
   "rules": {
+    "valid-jsdoc": "off",
     "prettier/prettier": [
       "error",
       {
         "endOfLine": "auto"
+      }
+    ],
+    "@openlayers/valid-tsdoc": [
+      "error",
+      {
+        "requireReturn": false
       }
     ],
     "no-underscore-dangle": "off",
