support multi row tasks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "declarationDir": "types",
     "declaration": true,
     "allowJs": true,
-    "checkJs": true,
-    "strictFunctionTypes": false,
+    "checkJs": false,
+    "strictFunctionTypes": true,
     "target": "es5",
     "module": "es2015",
     "strict": false,
