--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/stream": "^1.0.0",
+    "@types/promise-polyfill": "^6.0.3",
     "core-js": "^3.6.5",
     "deepmerge": "^2.0.1",
     "eslint": "6.8.0",
@@ -66,6 +67,7 @@
   ],
   "dependencies": {
     "classlist-polyfill": "^1.2.0",
-    "dayjs": "^1.8.27"
+    "dayjs": "^1.8.27",
+    "promise-polyfill": "^8.1.3"
   }
 }
